Git_WGBH_QC/src/objects/DEMO_Field_Update__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DEMO: Field Updates</relationshipLabel>
        <relationshipName>DEMO_Field_Updates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Year_Amount__c</fullName>
        <label>Current Year Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Year_Count__c</fullName>
        <label>Current Year Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Amount__c</fullName>
        <label>Prior Year Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Count__c</fullName>
        <label>Prior Year Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Track_Current_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Current Year?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Track_Prior_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Prior Year?</label>
        <type>Checkbox</type>
    </fields>
    <label>DEMO: Field Update</label>
    <nameField>
        <label>DEMO: Field Update Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DEMO: Field Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>